syntax = "proto3";
// system_login_log 登录日志
package logger;
option go_package = "cloud/service/system/logger;logger";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// SystemLoginLogObject 数据对象
message SystemLoginLogObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //主键
	// @inject_tag: db:"username" json:"username"
	optional string username = 2; //用户账号
	// @inject_tag: db:"user_ip" json:"userIp"
	optional string user_ip = 3; //用户ip
	// @inject_tag: db:"user_agent" json:"userAgent"
	optional string user_agent = 4; //UA
	// @inject_tag: db:"login_time" json:"loginTime"
	google.protobuf.Timestamp login_time = 5; //登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 6; //渠道
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 7; //
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 8; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 9; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 10; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 11; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 12; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 13; //更新时间
}
// SystemLoginLogTotalResponse 列表数据总量
message SystemLoginLogTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemLoginLogCreateRequest 创建数据请求
message SystemLoginLogCreateRequest {
	SystemLoginLogObject data = 1;
}
// SystemLoginLogCreateResponse 创建数据响应
message SystemLoginLogCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemLoginLogUpdateRequest 更新数据请求
message SystemLoginLogUpdateRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
	SystemLoginLogObject data = 2;
}
// SystemLoginLogUpdateResponse 更新数据响应
message SystemLoginLogUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemLoginLogDeleteRequest 删除数据请求
message SystemLoginLogDeleteRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
}
// SystemLoginLogDeleteResponse 删除数据响应
message SystemLoginLogDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemLoginLogRequest 查询单条数据请求
message SystemLoginLogRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
}
// SystemLoginLogResponse 查询单条数据响应
message SystemLoginLogResponse {
	int64 code = 1;
	string msg = 2;
	SystemLoginLogObject data = 3;
}
// SystemLoginLogRecoverRequest 恢复数据请求
message SystemLoginLogRecoverRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
}
// SystemLoginLogRecoverResponse 删除数据响应
message SystemLoginLogRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemLoginLogDropRequest 清理数据请求
message SystemLoginLogDropRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
}
// SystemLoginLogDropResponse 清理数据响应
message SystemLoginLogDropResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemLoginLogListRequest 列表数据
message SystemLoginLogListRequest {
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"username" json:"username"
	optional string username = 3; // 用户账号
	// @inject_tag: db:"begin_login_time" json:"beginLoginTime"
	google.protobuf.Timestamp begin_login_time = 4; // 登录时间
	// @inject_tag: db:"finish_login_time" json:"finishLoginTime"
	google.protobuf.Timestamp finish_login_time = 5; // 登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 6; // 渠道
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 7; // 用户编号
	// @inject_tag: db:"data_scope_dept" json:"dataScopeDept"
	optional bytes data_scope_dept = 8; //数据范围(指定部门数组)
	// @inject_tag: db:"dept_id" json:"deptId"
	optional int64 dept_id = 9; // 租户ID
	// @inject_tag: db:"data_scope" json:"dataScope"
	optional int32 data_scope = 10; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）
	// @inject_tag: db:"pagination" json:"pagination"
	optional pagination.PaginationRequest pagination = 11; // 分页
}

// SystemLoginLogListResponse 数据响应
message SystemLoginLogListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemLoginLogObject data = 3;
}
// SystemLoginLogListTotalRequest 列表数据
message SystemLoginLogListTotalRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"username" json:"username"
	optional string username = 3; // 用户账号
	// @inject_tag: db:"begin_login_time" json:"beginLoginTime"
	google.protobuf.Timestamp begin_login_time = 4; // 登录时间
	// @inject_tag: db:"finish_login_time" json:"finishLoginTime"
	google.protobuf.Timestamp finish_login_time = 5; // 登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 6; // 渠道
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 7; // 用户编号
	// @inject_tag: db:"data_scope_dept" json:"dataScopeDept"
	optional bytes data_scope_dept = 8; //数据范围(指定部门数组)
	// @inject_tag: db:"dept_id" json:"deptId"
	optional int64 dept_id = 9; // 租户ID
	// @inject_tag: db:"data_scope" json:"dataScope"
	optional int32 data_scope = 10; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）

}


// SystemLoginLogMultipleRequest 多选数据请求
message SystemLoginLogMultipleRequest {
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"ids" json:"ids"
	optional bytes ids = 2; // 主键
}

// SystemLoginLogMultipleResponse 多选数据响应
message SystemLoginLogMultipleResponse {
	int64 code = 1;
	string msg = 2;
}


// SystemLoginLogService 服务
service SystemLoginLogService{
	rpc SystemLoginLogCreate(SystemLoginLogCreateRequest) returns (SystemLoginLogCreateResponse);
	rpc SystemLoginLogUpdate(SystemLoginLogUpdateRequest) returns (SystemLoginLogUpdateResponse);
	rpc SystemLoginLogDelete(SystemLoginLogDeleteRequest) returns (SystemLoginLogDeleteResponse);
	rpc SystemLoginLog(SystemLoginLogRequest) returns (SystemLoginLogResponse);
	rpc SystemLoginLogRecover(SystemLoginLogRecoverRequest) returns (SystemLoginLogRecoverResponse);
	rpc SystemLoginLogDrop(SystemLoginLogDropRequest) returns (SystemLoginLogDropResponse);
	rpc SystemLoginLogList(SystemLoginLogListRequest) returns (SystemLoginLogListResponse);
	rpc SystemLoginLogListTotal(SystemLoginLogListTotalRequest) returns (SystemLoginLogTotalResponse);
	rpc SystemLoginLogMultipleDelete(SystemLoginLogMultipleRequest) returns (SystemLoginLogMultipleResponse);
	rpc SystemLoginLogMultipleRecover(SystemLoginLogMultipleRequest) returns (SystemLoginLogMultipleResponse);
	rpc SystemLoginLogMultipleDrop(SystemLoginLogMultipleRequest) returns (SystemLoginLogMultipleResponse);
}